--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,6 @@
 * { box-sizing: border-box; }
 html, body { margin: 0; padding: 0; font-family: Calibri, Tahoma, Arial, Sans-serif; min-height: 100vh; }
+h1, h2, h3, h4, h5, h6 { margin: 5px; padding: 5px; }
 p { margin: 10px; }
 
 .site.header { background-color: #333; color: #FFF; }
